chore: checkpoint file storage updates
